--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section id="about" class="section">
         <div class="container">
             <h2>About Me</h2>
-            <p>Hello! I am a passionate developer with experience in creating websites and applications. I enjoy solving problems and bringing ideas to life through code.</p>
+            <p>Hello! I am a passionate developer with experience in creating websites and applications. I enjoy learning about the world and solving problems I find within it.</p>
         </div>
     </section>
 
@@ -32,8 +32,8 @@
             <h2>My Projects</h2>
             <div class="projects">
                 <div class="project">
-                    <h3>Project 1</h3>
-                    <p>A brief description of the project.</p>
+                    <h3>Mutual Learning in Machine Learning Algorithms</h3>
+                    <p>Investigates how two machine learning models, Stochastic Gradient Descent Classifier (SGDC) and Naive Bayes, can collaborate during training to improve performance.</p>
                 </div>
                 <div class="project">
                     <h3>Project 2</h3>
