--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <section id="contact" class="section">
         <div class="container">
             <h2>Contact</h2>
-            <p>If you'd like to get in touch, feel free to email me at <a href="mailto:your-email@example.com">your-email@example.com</a>.</p>
+            <p>If you'd like to get in touch, feel free to email me at <a href="mailto:theisingsamuel@l@gmail.com">theisingsamuel@gmail.com</a>.</p>
         </div>
     </section>
 
