--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
                 <div class="project">
                     <h3>Mutual Learning in Machine Learning Algorithms</h3>
                     <p>Investigates how two machine learning models, Stochastic Gradient Descent Classifier (SGDC) and Naive Bayes, can collaborate during training to improve performance.</p>
+                    <p>
+                        <a href="https://github.com/49500/495CapstoneProject">Project Github</a>
+                        <a href="">Final Report</a>
+                        <iframe src="https://docs.google.com/document/d/e/2PACX-1vRHt7rW2XEL8xejlCst7fdjHQRbcMpnmigWJBX8wi0sr7i0Xn0yQU1xUAqcHkm2qw/pub?embedded=true"></iframe>
+                    </p>
                 </div>
                 <div class="project">
                     <h3>Project 2</h3>
@@ -56,7 +61,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Your Name. All rights reserved.</p>
+            <p>&copy; 2025 Samuel Theising. All rights reserved.</p>
         </div>
     </footer>
 </body>
