--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                     <p>Investigates how two machine learning models, Stochastic Gradient Descent Classifier (SGDC) and Naive Bayes, can collaborate during training to improve performance.</p>
                     <p>
                         <a href="https://github.com/49500/495CapstoneProject">Project Github</a>
-                        <a href="">Final Report</a>
-                        <iframe src="https://docs.google.com/document/d/e/2PACX-1vRHt7rW2XEL8xejlCst7fdjHQRbcMpnmigWJBX8wi0sr7i0Xn0yQU1xUAqcHkm2qw/pub?embedded=true"></iframe>
+                        <a href="https://docs.google.com/document/d/e/2PACX-1vRHt7rW2XEL8xejlCst7fdjHQRbcMpnmigWJBX8wi0sr7i0Xn0yQU1xUAqcHkm2qw/pub">Final Report</a>
+                    
                     </p>
                 </div>
                 <div class="project">
